--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <!-- result -->
           <div class="result">
             <h1 id="city">Montreal</h1>
-            <h2 class="currentDate">Thu, Jun 01 4:50 PM</h2>
+            <h2 id="date">Thu, Jun 01 4:50 PM</h2>
             <br />
             <!-- Current weather -->
             <section id="current-weather">
