--- a/index.html
+++ b/index.html
@@ -53,12 +53,7 @@
             <!-- Current weather -->
             <section id="current-weather">
               <div class="current-weather">
-                <img
-                  src="assets/sunny.png"
-                  alt="sunny"
-                  width="100"
-                  height="100"
-                />
+                <img src="" alt="" id="icon" />
                 <div class="degree">
                   <h3 id="temperature" class="temperature">
                     22
