--- a/index.html
+++ b/index.html
@@ -46,29 +46,29 @@
               </div>
             </div>
           </form>
-          <!-- result -->
+          <!-- start result -->
           <div class="result">
             <h1 id="city">Montreal</h1>
             <p class="description">
-              <span id="date">Thu, Jun 01 4:50 PM></span><br /><span
-                id="condition"
-                >Sunny</span
-              >
+              <span id="date"></span><br /><span id="condition"></span>
             </p>
-            <!-- Current weather -->
-            <section id="current-weather">
-              <div class="current-weather">
+          </div>
+          <!-- end result -->
+          <!-- start current weather -->
+          <div class="row">
+            <div class="col-6">
+              <div class="d-flex weather-temperature">
                 <img src="" alt="" id="icon" />
                 <div class="degree">
-                  <h3 id="temperature" class="temperature">
-                    22
-                    <span class="units">
-                      <a href="#" id="celsius">°C</a> |
-                      <a href="#" id="fahrenheit">°F</a>
-                    </span>
-                  </h3>
+                  <strong id="temperature"></strong>
+                  <span class="units">
+                    <a href="#" id="celsius">°C</a> |
+                    <a href="#" id="fahrenheit">°F</a>
+                  </span>
                 </div>
               </div>
+            </div>
+            <div class="col-6">
               <div class="details">
                 <ul>
                   <li class="row-holder">
@@ -80,7 +80,8 @@
                   </li>
                 </ul>
               </div>
-            </section>
+            </div>
+            <!-- end current weather -->
           </div>
         </div>
         <small>
@@ -92,5 +93,10 @@
       </div>
     </div>
     <script src="src/app.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
