--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Sunny weather app</title>
     <link rel="stylesheet" href="src/style.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -29,25 +29,25 @@
                   placeholder="Type a city"
                 />
               </div>
-              <div class="col-md-2">
+              <div class="col-md-4">
                 <input
                   class="btn-primary col-md-2 submit"
                   type="submit"
                   value="Search"
                 />
               </div>
-              <div class="col-md-2">
+              <!-- <div class="col-md-2">
                 <input
                   id="current"
                   class="btn-primary col-md-2 current"
                   type="submit"
                   value="Current"
                 />
-              </div>
+              </div> -->
             </div>
           </form>
           <!-- start result -->
-          <div class="result">
+          <div class="current-temp">
             <h1 id="city">Montreal</h1>
             <p class="description">
               <span id="date"></span><br /><span id="condition"></span>
