Add forecast day

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
             </div>
             <!-- end current weather -->
           </div>
+          <h1>Next 7 days</h1>
+          <div id="forecast" class="weather-forecast"></div>
         </div>
         <small>
           <a href="https://github.com/charlinemons/weather-app" target="_blank"
