--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="weather-app">
           <!-- form -->
           <form id="search-form">
-            <div class="row">
+            <div class="row mobile">
               <div class="col-md-8">
                 <input
                   class="placeholder"
