Update link Netlify

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           and
           <a
             class="links"
-            href="https://steady-marshmallow-1dd2fa.netlify.app"
+            href="https://weather-app-v2-cm.netlify.app/"
             target="_blank"
             rel=""
             >hosted on Netlify</a
